--- a/src/styles.css
+++ b/src/styles.css
@@ -33,7 +33,8 @@ button {
 }
 button:hover {
   filter: brightness(90%);
-  transform: rotate(-5deg);
+  /* transform: rotate(-5deg); */
+  transform: translate(0, 0.3rem);
 }
 
 .item1 {
